# mock-cpp-project

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
Package/: CMakeLists.txt  Package.cpp  Package.h
Package/tests/: CMakeLists.txt  test_package.cpp
